--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -24,9 +24,9 @@ jobs:
     - name: Build with Ant
       run: ant -noinput -buildfile build.xml
     - name: Download a Build Artifact
-        uses: actions/download-artifact@v3
-        with:
-          # Artifact name
-          name: lab8.jar
-          # Destination path
-          path: dist/lab8.jar
+      uses: actions/download-artifact@v3.0.0
+      with:
+        # Artifact name
+        name: lab8.jar # optional
+        # Destination path
+        path: dist/ # optional
