--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -29,4 +29,4 @@ jobs:
         # Artifact name
         name: lab8.jar # optional
         # Destination path
-        path: dist/ # optional
+        path: dist/lab8.jar # optional
