--- a/.github/workflows/ant2.yml
+++ b/.github/workflows/ant2.yml
@@ -23,3 +23,10 @@ jobs:
         distribution: 'temurin'
     - name: Build with Ant
       run: ant -noinput -buildfile build.xml
+    - name: Download a Build Artifact
+      uses: actions/download-artifact@v3
+      with:
+        # Artifact name
+        name: lab8.jar # optional
+        # Destination path
+        path: dist/lab8.jar # optional
