--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -30,3 +30,10 @@ jobs:
         name: lab8.jar # optional
         # Destination path
         path: dist/lab8.jar # optional
+    - name: javadoc-cleanup
+      # You may pin to the exact commit or the version.
+      # uses: cicirello/javadoc-cleanup@ef23269b3b39f8d71200f09a8c183db37dea1426
+      uses: cicirello/javadoc-cleanup@v1.3.2
+      with:
+        # The path to the root of the website
+        path-to-root: .
