--- a/.github/workflows/ant2.yml
+++ b/.github/workflows/ant2.yml
@@ -23,6 +23,8 @@ jobs:
         distribution: 'temurin'
     - name: Build with Ant
       run: ant -noinput -buildfile build.xml
+    - name: Ant dist
+      run: ant -noinput -dist build.xml
     - name: Download a Build Artifact
       uses: actions/download-artifact@v3
       with:
