--- a/.github/workflows/ant2.yml
+++ b/.github/workflows/ant2.yml
@@ -16,19 +16,16 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up JDK 11
+    - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
         java-version: '17'
         distribution: 'temurin'
     - name: Build with Ant
       run: ant -noinput -buildfile build.xml
-    - name: Ant dist
-      run: ant -noinput -d dist
     - name: Download a Build Artifact
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v3.0.0
+    - name: javadoc-cleanup
+      uses: cicirello/javadoc-cleanup@v1.3.2
       with:
-        # Artifact name
-        name: lab8.jar # optional
-        # Destination path
-        path: dist/lab8.jar # optional
+        path-to-root: .
